--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,23 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      @font-face {
+        font-family: Gumela;
+        src: url("../src/fonts/Gumela/*");
+      }
+      * {
+        font-family: "Gumela";
+        font-weight: normal;
+        font-size: 20px;
+      }
+      body {
+        box-sizing: border-box;
+        margin: 0;
+        /* overflow: hidden;
+        overflow-x: hidden; */
+      }
+    </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
